# opencodex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  opencodex.bat  opencodex.py  pyproject.toml
.github/workflows/: ci.yml
backup/: config.original.toml
contrib/: opencodex-catalog.json
contrib/launchd/: com.opencodex.proxy.plist
contrib/systemd/: opencodex-proxy.service
src/opencodex_proxy/: __init__.py  app.py  cli.py  protocol.py  tui.py
tests/: test_app.py  test_integration.py  test_protocol.py  test_tui_models.py
